--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'org.jsoup:jsoup:1.8.3'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
 
 
